--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,6 +10,12 @@
 	"observability": {
 		"enabled": true
 	},
+	"routes": [
+		{
+			"pattern": "fraud.erfi.dev",
+			"custom_domain": true
+		}
+	],
 	/**
 	 * KV Namespaces
 	 * Configuration is stored in KV under the "config.json" key
@@ -30,7 +36,15 @@
 		{
 			"binding": "ANALYTICS"
 		}
-	]
+	],
+	/**
+	 * Static Assets
+	 * https://developers.cloudflare.com/workers/static-assets/binding/
+	 */
+	"assets": {
+		"directory": "./public/",
+		"binding": "ASSETS"
+	}
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -40,11 +54,6 @@
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
 	 */
-	/**
-	 * Static Assets
-	 * https://developers.cloudflare.com/workers/static-assets/binding/
-	 */
-	// "assets": { "directory": "./public/", "binding": "ASSETS" }
 	/**
 	 * Service Bindings (communicate between multiple Workers)
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
