Major reorganization: unified CLI system and codebase cleanup
Created professional CLI system to consolidate scattered scripts and provide unified interface for training, deployment, data management, and testing operations. This addresses technical debt from having utility scripts scattered across root and scripts directories.

Key improvements:
- CLI System: 13 commands organized in 5 categories (train, deploy, data, test, config) with ~1,500 lines of TypeScript
- Codebase Cleanup: Moved legacy scripts to scripts/legacy/, removed 7,800 lines of redundant code
- Markov Chain: Completed integration with two-model architecture trained on 182K+ email samples
- Training Data: Added comprehensive CSV datasets (6.9M+ rows) for future model improvements
- Documentation: Reorganized docs with archive structure, added 4 detailed technical summaries
- Repository Structure: Clean root directory with logical organization (cli/, models/, scripts/legacy/)

Technical details:
- Markov models deployed to KV (MARKOV_MODEL namespace)
- All 8/8 detectors now operational in production
- CLI includes progress tracking, colored output, and comprehensive help system
- Version bumped to 1.3.1

See CLEANUP_SUMMARY_2025-11-02.md and WORK_COMPLETE_2025-11-02.md for complete details.

--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,11 @@ dist
 cf-docs
 
 # Project-specific
-data/fraudulent-emails.json
-data/remote-test-results.json
 *.log
+
+
+# Training models and temporary files
+models/
+test-emails.json
+markov_*.json
+training*.log
