--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
+		"cli": "bun run cli/index.ts",
 		"typecheck": "tsc --noEmit",
 		"predeploy": "npm run typecheck",
 		"deploy": "wrangler deploy",
@@ -24,6 +25,7 @@
 		"wrangler": "^4.45.3"
 	},
 	"dependencies": {
+		"csv-parse": "^6.1.0",
 		"hono": "^4.10.4",
 		"pino": "^10.1.0",
 		"pino-pretty": "^13.1.2"
