--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
 		"wrangler": "^4.45.3"
 	},
 	"dependencies": {
+		"chart.js": "^4.5.1",
+		"chartjs-plugin-zoom": "^2.2.0",
 		"csv-parse": "^6.1.0",
+		"hammerjs": "^2.0.8",
 		"hono": "^4.10.4",
 		"pino": "^10.1.0",
 		"pino-pretty": "^13.1.2"
