Start Plotly.js migration: Convert Decision Breakdown chart
- Installed plotly.js-basic-dist (2.8MB, includes scatter, bar, pie)
- Added Plotly.js to static assets
- Converted Decision Breakdown from Chart.js doughnut to Plotly pie chart
- Changed canvas to div for Plotly rendering
- Added dark mode support with theme detection
- Improved hover tooltips with custom template
- Added responsive config and modebar controls

Benefits over Chart.js:
- Smoother zoom/pan interactions
- Better tooltips out of the box
- Built-in export to PNG
- Professional appearance

Next: Convert remaining 20+ charts incrementally

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"hammerjs": "^2.0.8",
 		"hono": "^4.10.4",
 		"pino": "^10.1.0",
-		"pino-pretty": "^13.1.2"
+		"pino-pretty": "^13.1.2",
+		"plotly.js-basic-dist": "^3.2.0"
 	}
 }
