--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"scripts": {
 		"cli": "bun run cli/index.ts",
 		"typecheck": "tsc --noEmit",
-		"predeploy": "npm run typecheck",
-		"deploy": "wrangler deploy",
-		"deploy:skip-checks": "wrangler deploy",
+		"dashboard:build": "cd dashboard && npm run build",
+		"dashboard:dev": "cd dashboard && npm run dev",
+		"predeploy": "npm run dashboard:build && npm run typecheck",
+		"deploy": "npm run dashboard:build && wrangler deploy",
+		"deploy:skip-checks": "npm run dashboard:build && wrangler deploy",
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
 		"cf-typegen": "wrangler types",
