docs: clean up documentation to reflect current state only
## Dashboard Fix
- Add POST /admin/analytics endpoint to bypass Cloudflare WAF
- Dashboard now uses POST instead of GET for custom SQL queries
- WAF was blocking SQL keywords in URL parameters
- Both GET (predefined) and POST (custom) endpoints work

## Documentation Updates
- Remove deprecated detector sections from DETECTORS.md (252 lines)
  - Keyboard Walk Detector (140 lines)
  - N-Gram Gibberish Detector (112 lines)
- Renumber remaining sections (6→4, 7→5, 8→6)
- Remove version markers and temporal language
  - "NEW in v2.2.0" → current state descriptions
  - "(v2.2.0 - ...)" → removed version tags
- Update ANALYTICS.md
  - Change "Migration from Analytics Engine" → "Database Backend"
  - Update custom query examples to use POST endpoint
- Update API.md
  - Add POST /admin/analytics documentation
  - Update examples with Markov detection
- Update SCORING.md
  - Change "New Approach (v2.2.0)" → "Current Approach"
- Update ARCHITECTURE.md
  - Remove version numbers from deprecation notices

## Code Changes
- Add POST endpoint in src/routes/admin.ts
- Update dashboard API client (dashboard/src/lib/api.ts)
- Deprecate keyboard/gibberish functions in dashboard
- Update deprecated column handling in database metrics
- Add data export/relabel scripts (no PII committed)

## Security
- Update .gitignore to prevent committing PII
- Block data export JSON files (validations_*.json, deduped_*.json)

All documentation now reflects only the current system state.

--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,10 @@ analysis-archive/
 d1-validations.json
 false-*.json
 label-corrections.json
+
+# Data exports (contains PII - production email addresses)
+*.archive.json
+validations_*.json
+deduped_*.json
+d1-validations.json
+**/exports/*.json
