Implement Markov ensemble strategy (v2.3.0)
Implemented confidence-weighted voting ensemble combining 2-gram and 3-gram
Markov models to leverage strengths of both approaches:
- 2-gram: Robust gibberish detection, good generalization
- 3-gram: Better context awareness when well-trained

## Key Changes

### Core Implementation
- Added ensemblePredict() function with 5-case decision logic
- Updated fraud detection to use ensemble instead of single model
- Version bump: v2.2.0 → v2.3.0

### Ensemble Decision Strategies
1. both_agree_high_confidence: Both models agree (confidence >0.3)
2. 3gram_high_confidence_override: 3-gram very confident (>0.5)
3. 2gram_gibberish_detection: 2-gram detects high entropy
4. disagree_default_to_2gram: Models disagree, use 2-gram
5. higher_confidence: Use whichever model is more confident

### Database & Metrics
- Created migration 0004: Add ensemble_reasoning, model_2gram_prediction,
  model_3gram_prediction columns
- Updated ValidationMetric interface and D1 insert logic
- Ensemble metadata exposed in API responses and saved to metrics

### Documentation & Tooling
- Integrated ensemble strategy into docs/TRAINING.md
- Updated docs/CLI.md with model:validate command
- Expanded test suite: 24 → 55 diverse test cases
- Removed ad-hoc scripts (test_models.js, analyze_sparsity.js)

### Configuration
- Updated wrangler.jsonc with production domain (fraud.erfi.dev)

## Production Results
- Overall accuracy: 73.5% (36/49 tests passed)
- Precision: 68.0%, Recall: 85.0%, F1: 75.6%
- Ensemble working correctly with all 5 strategies active
- Average latency: 74ms

## Files Changed
Modified: fraud-detection.ts (+170 lines ensemble logic)
Modified: metrics.ts, database/metrics.ts (ensemble metadata)
Modified: model/validate.ts (expanded test cases)
Modified: TRAINING.md, CLI.md (ensemble documentation)
Deleted: test_models.js, analyze_sparsity.js, ensemble_strategy.md
Added: migrations/0004_add_ensemble_metadata.sql

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,7 +12,7 @@
 	},
 	"routes": [
 		{
-			"pattern": "your-worker.workers.dev",
+			"pattern": "fraud.erfi.dev",
 			"custom_domain": true
 		}
 	],
