--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bogus-email-pattern-recognition",
+  "name": "markov-mail",
   "version": "2.4.2",
   "private": true,
   "scripts": {
