--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "bogus-email-pattern-recognition",
+	"name": "markov-mail",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-10-11", // RPC enabled (requires 2024-04-03+)
 	"observability": {
